[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "asmk",
    "gradio>=4",
    "kagglehub>=1.0.1",
    "marker-pdf>=1.10.2",
    "numpy<2",
    "opencv-contrib-python-headless",
    "pandas",
    "pillow",
    "psutil>=7.2.2",
    "pyaml",
    "pyhesaff",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
cpu = [
    "faiss-cpu",
]
gpu = [
    "faiss-gpu-cu12",
]

[tool.uv.sources]
asmk = { path = "asmk", editable = true }
pyhesaff = { url = "https://github.com/Erotemic/pyhesaff/releases/download/v2.2.0/pyhesaff-2.2.0-cp310-cp310-manylinux_2_28_x86_64.whl" }
